@@ -4,9 +4,25 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
+application {
+    mainClass = 'root.Main'
+}
+
+
+
 javafx {
-    version = "15"
+    version = "15.0.1"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+run {
+   jvmArgs = [
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+        "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+                "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED"
+    ]
 }
 
 group 'org.winterbreak'
@@ -18,9 +34,17 @@ repositories {
     mavenCentral()
 }
 
+
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.jfoenix:jfoenix:9.0.10'
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'root.Main'
+    }
 }
 
 mainClassName = 'root.Main'
